--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.22.0",
     "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3",
     "tslint-react-hooks": "^2.2.2"
