--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,14 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "react"],
   "env": {
     "node": true,
     "commonjs": true,
     "es2021": true
   },
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": 11,
     "sourceType": "module"
   },
   "extends": [
