--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
@@ -50,5 +51,8 @@
     "prettier": "^2.5.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
