--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.2.1",
     "cors": "^2.8.5",
     "next": "^12.0.4",
