--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,10 @@
 {
-    "singleQuote": true,
-    "useTabs": true,
-    "tabWidth": 1,
-    "semi": false,
-    "jsxSingleQuote": true,
-    "arrowParens": "avoid"
+  "singleQuote": false,
+  "jsxSingleQuote": true,
+  "arrowParens": "always",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "trailingComma": "es5"
 }
