--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "yarn prettier --write ."
+    "format": "yarn prettier --write --ignore-path \"./.prettierignore\" .",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +19,13 @@
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.2.1",
     "cors": "^2.8.5",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.22.0",
     "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3",
     "tslint-react-hooks": "^2.2.2"
@@ -32,6 +35,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
@@ -39,11 +43,17 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.1.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
