--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "electronic_store",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
+    "dev": "nodemon",
+    "dev1": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -21,7 +20,10 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.2.1",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,7 +37,8 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
-    "@types/styled-components": "^5.1.15",
+    "@types/express": "^4.17.13",
+    "@types/styled-components": "5.1.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
@@ -48,12 +51,14 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.1.2",
+    "next-transpile-modules": "^8.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
+    "ts-node": "^10.7.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.2"
   },
   "resolutions": {
-    "styled-components": "^5"
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
