--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
     "prettier"
   ],
   "rules": {
+    "eqeqeq": "error",
+    "no-console": "error",
     "react/jsx-filename-extension": [
       1,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
