--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.2.1",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "babel-plugin-formatjs": "^10.3.20",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -37,13 +39,17 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@formatjs/cli": "^4.8.4",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.182",
     "@types/styled-components": "5.1.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "babel-plugin-react-intl": "^8.2.25",
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-formatjs": "^3.1.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
